--- a/slides/index.html
+++ b/slides/index.html
@@ -55,7 +55,7 @@ URL: https://code.google.com/p/io-2012-slides
                         <li>'java' and 'scala' are starting point for exercises</li>
                         <li>'java-solution' and 'scala-solution' for solution</li>
                         <li>E.g. 'git checkout java' for branch with Java exercises</li>
-                        <li>Start downloading dependencies: './sbt test' or mvn 'test'  </li>
+                        <li>Start downloading dependencies: './sbt test' or 'mvn test'  </li>
                     </ul>
                 </li>
             </ul>
