Add slide about importing project to Eclipse

--- a/slides/index.html
+++ b/slides/index.html
@@ -308,6 +308,18 @@ class GreetingActor(delay: FiniteDuration) extends Actor {
 
     <slide>
         <hgroup>
+            <h2>Importing project to Eclipse</h2>
+        </hgroup>
+        <article class="large">
+            <ul>
+                <li>Generate Eclipse metadata<br/><br/><pre class="prettyprint">./sbt eclipse</pre>
+                </li>File -> Import -> "Existing project into workspace" -> Select project's basedir</li>
+            </ul>
+        </article>
+    </slide>
+
+    <slide>
+        <hgroup>
             <h2>Outline</h2>
         </hgroup>
         <article class="large">
