Add what is Akka slide

--- a/slides/index.html
+++ b/slides/index.html
@@ -87,12 +87,22 @@ URL: https://code.google.com/p/io-2012-slides
 
     <slide>
         <hgroup>
+            <h2>What is Akka?</h2>
+        </hgroup>
+        <article>
+            <img width="1000px" src="figures/akka-toolkit.png"/>
+        </article>
+    </slide>
+
+    <slide>
+        <hgroup>
             <h2>Motivation</h2>
         </hgroup>
         <article>
             <img src="images/philosoraptor.jpg"/>
         </article>
     </slide>
+
 
     <slide>
         <hgroup>
